# libdry

./: .travis.yml  Makefile.am  README.rst  configure.ac
etc/coverity/: model.cc
src/: Makefile.am  dry.h
src/dry/: Makefile.am  bitops.h  bitset.h  semaphore.h  version.h.in
src/dry/bitset/: adaptive_bitset.h  dense_bitset.h  empty_bitset.h  small_bitset.h  uniform_bitset.h
src/dry/semaphore/: atomic_binary_semaphore.h
test/: .gitignore  Makefile.am  check-bitops.cc  check-bitset.cc  check-semaphore.cc
