pkgincludedir = $(includedir)/dry
base_pkgincludedir = $(pkgincludedir)

nobase_pkginclude_HEADERS =           \
  bitops.h                            \
  bitset.h                            \
  bitset/adaptive_bitset.h            \
  bitset/dense_bitset.h               \
  bitset/empty_bitset.h               \
  bitset/small_bitset.h               \
  bitset/uniform_bitset.h             \
  semaphore.h                         \
  semaphore/atomic_binary_semaphore.h \
  version.h
